--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Mystery+Quest&family=Pixelify+Sans:wght@400..700&display=swap');
-
 :root {
     /* Colors */
     --dark-purple: #6917d0;
@@ -9,8 +7,8 @@
     --blue: #17ffee;
 
     /* Fonts */
-    --main-font: 'Pixelify Sans';
-    --header-font: 'Mystery Quest';
+    --main-font: 'pixel';
+    --header-font: 'planet';
     --header-font-size: 35px;
     --base-font-size: 1em;
     --base-line-height: 1.4em;
