--- a/Pages/Games/C4/css/style.css
+++ b/Pages/Games/C4/css/style.css
@@ -1,71 +1,95 @@
-/* Basic CSS resets -- leveling slight inconsistencies in browsers */
-html, body {
-	margin:0px;
-	padding:0px;
-	height:100%;
-	
+/*******tic-tac-toe******/
+#tic-tac-toe .disable {
+    text-transform: uppercase;
+    font-size: 30px;
+    font-family: Georgia, "Times New Roman", Times, serif
 }
 
-html {
-		/* Standard text-settings below */
-	font-size: 1em;
-    line-height: 1.4em;
+#tic-tac-toe #game li {
+    float: left;
+    padding: 0;
+    list-style: none;
+    text-align: center;
+    margin-bottom: 20px;
+    color: #fff;
+    height: 60px;
+    line-height: 60px;
+    font-size: 40px;
+    color: #ccc
 }
 
-td {
-	background-color: #638CFF;
-	border: 0px !important;
-	padding: 5px !important;
-}
-.img-player{
-	max-width: 100px;
+#tic-tac-toe #game li.disable {
+    color: #fff
 }
 
-
-
-
-/* Mobile First CSS: we'll design for phone sizes first, then add media queries for larger screens later */
-
-/*body{}
-
-
-#container {
-	
+#tic-tac-toe #game {
+    float: left;
+    padding: 0;
+    clear: both
 }
 
+.new_span {
+    width: 226px
+}
 
+#tic-tac-toe #reset {
+    padding: 5px 10px;
+    color: #fff;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    clear: both;
+    cursor: pointer;
+    float: left;
+    text-align: center;
+    text-transform: uppercase;
+    outline: none;
+    width: 204px
+}
 
+.input-prepend span.pre_text {
+    width: 55px
+}
 
+.input-prepend .span1 {
+    width: 93px
+}
 
+.input-prepend {
+    margin-bottom: 10px
+}
 
+.clr {
+    clear: both;
+    height: 0
+}
 
+#tic-tac-toe h1 {
+    text-align: center;
+    font-size: 28px
+}
 
+#tic-tac-toe li::-moz-selection {
+    background: none;
+    color: #000;
+}
 
-/* ========================================
-MEDIA QUERIES!
-You can adjust the min-width numbers below, and add as many new media queries as you need.
-======================================== */
+#tic-tac-toe li::selection {
+    background: none;
+    color: #000;
+}
 
+#tic-tac-toe {
+    width: 220px;
+    margin: 0 auto
+}
 
+.input-append .win_times {
+    background: #fff;
+    width: 101px
+}
 
-/* Minimum width for laptops. */
-@media all and (min-width: 769px) {
-	
-	
-	
-	
-} /* closes 769px+ */
+.input-append .win_text {
+    width: 52px
+}
 
-
-
-
-/* Minimum width for desktop screens. */
-@media all and (min-width: 1024px) {
-	
-	
-	
-	
-} /* closes 1024px+ */
-
-
-
+/*******tic-tac-toe END******/
