--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -31,6 +31,15 @@ html, body {
     padding: 0;
     height: 100%;
  
+body {
+    font-family: var(--main-font), sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: black;
+    background-image: url(/Assets/img/aquagalaxy_small.gif);
+    color: #ffffff;
+    cursor: url('../img/oth756.png'), auto;
+}
 
 }
 
