--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -39,7 +39,7 @@ body {
     background-color: black;
     background-image: url(/Assets/img/aquagalaxy_small.gif);
     color: #ffffff;
-    cursor: url('Assets/img/cursor/oth756.png'), /*auto;*/
+    cursor: url('Assets/img/cursor/oth756.png'); /*auto;*/
 }
 
 }
@@ -82,7 +82,7 @@ body {
     background-color: black;
     background-image: url(/Assets/img/aquagalaxy_small.gif);
     color: #ffffff;
-    cursor: url('Assets/img/cursor/oth756.png'), /* auto; */
+    cursor: url('Assets/img/cursor/oth756.png'); /* auto; */
 }
 
 header {
