--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -30,7 +30,7 @@ html, body {
     margin: 0;
     padding: 0;
     height: 100%;
-    cursor: url(/Assets/img/cursor/cursor2.gif); /*auto;*/
+    /*cursor: url(/Assets/img/cursor/cursor2.gif); auto;*/
  
 body {
     font-family: var(--main-font), sans-serif;
@@ -39,7 +39,7 @@ body {
     background-color: black;
     background-image: url(/Assets/img/aquagalaxy_small.gif);
     color: #ffffff;
-    cursor: url(/Assets/img/cursor/cursor2.gif); /*auto;*/
+    /*cursor: url(/Assets/img/cursor/cursor2.gif); /*auto;*/
 }
 
 }
