--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -25,11 +25,11 @@
     src: url(planet.TTF) format('truetype');
     font-display: swap;
 }
-/* html, body {
+ html, body {
     margin: 0;
     padding: 0;
     height: 100%;
-    /*cursor: url(/Assets/img/cursor/cursor2.gif); auto;*/
+    cursor: url(/Assets/img/cursor/cursor2.gif), auto;
  
 body {
     font-family: var(--main-font), sans-serif;
@@ -41,7 +41,7 @@ body {
     cursor: url(../img/cursor/oth756.png), auto;
 }
 
-/*}*/
+}
 
 
 
