Removing auto again to check consistency

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -38,7 +38,7 @@ body {
     background-color: black;
     background-image: url(../img/aquagalaxy_small.gif);
     color: #ffffff;
-    cursor: url(../img/cursor/oth756.png), auto;
+    cursor: url(../img/cursor/oth756.png);
 }
 
 }
