--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -29,7 +29,7 @@
     margin: 0;
     padding: 0;
     height: 100%;
-    /* cursor: url(../img/cursor/cursor2.gif), auto;*/
+    cursor: url(../img/cursor/cursor2.gif), auto;
  
 body {
     font-family: var(--main-font), sans-serif;
