--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -81,7 +81,7 @@ body {
     background-color: black;
     background-image: url(/Assets/img/aquagalaxy_small.gif);
     color: #ffffff;
-    /* cursor: url(/Assets/img/cursor/cursor2.gif); /* auto; */
+    cursor: url(/Assets/img/cursor/cursor2.gif); 
 }
 
 header {
