copypaste from website

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -274,5 +274,5 @@ You can adjust the min-width numbers below, and add as many new media queries as
 
 /* closes 1024px+ */
 
-
+/* Start https://www.cursors-4u.com */ * {cursor: url(https://cur.cursors-4u.net/others/oth-8/oth756.cur), auto !important;} /* End https://www.cursors-4u.com */
 
