purple navbar color

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -298,5 +298,11 @@ You can adjust the min-width numbers below, and add as many new media queries as
     }
 }
 
+.right-tab {
+    color: purple !important;
+}
+
+
+
 
 
