--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -299,7 +299,7 @@ You can adjust the min-width numbers below, and add as many new media queries as
 }
 
 .right-tab {
-    color: purple !important;
+    color: rgb(188, 24, 213) !important;
 }
 
 
